# image_sequence_localizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  readme.md  run_matching.sh
.github/workflows/: main.yml
cmake/: UpdateSubmodules.cmake
src/: CMakeLists.txt  localization_protos.proto
src/apps/: CMakeLists.txt
src/apps/cost_matrix_based_matching/: CMakeLists.txt  compute_scan_context_cost_matrix.cpp  cost_matrix_based_matching_lsh.cpp  cost_matrix_no_hashing.cpp  kdtree_retrieval.cpp  localization_by_hashing.cpp  online_localizer_lsh.cpp  scan_context_matching.cpp
src/apps/feature_based_matching/: CMakeLists.txt  feature_based_localizer.cpp
src/apps/similarity_matrix_based_matching/: CMakeLists.txt  localization_by_hashing.cpp  online_localizer_lsh.cpp  similarity_matrix_no_hashing.cpp
src/localization/: CMakeLists.txt
src/localization/database/: CMakeLists.txt  cost_matrix.cpp  cost_matrix.h  cost_matrix_database.cpp  cost_matrix_database.h  idatabase.h  list_dir.cpp  list_dir.h  online_database.cpp  online_database.h  similarity_matrix.cpp  similarity_matrix.h  similarity_matrix_database.cpp  similarity_matrix_database.h
src/localization/features/: CMakeLists.txt  cnn_feature.cpp  cnn_feature.h  feature_buffer.cpp  feature_buffer.h  feature_factory.cpp  feature_factory.h  ifeature.h  scan_context.cpp  scan_context.h
src/localization/online_localizer/: CMakeLists.txt  ilocvisualizer.h  online_localizer.cpp  online_localizer.h  path_element.cpp  path_element.h
src/localization/relocalizers/: CMakeLists.txt  default_relocalizer.cpp  default_relocalizer.h  irelocalizer.h  lsh_cv_hashing.cpp  lsh_cv_hashing.h  scan_context_relocalizer.cpp  scan_context_relocalizer.h
src/localization/successor_manager/: CMakeLists.txt  node.h  successor_manager.cpp  successor_manager.h
src/localization/tools/config_parser/: config_parser.cpp  config_parser.h
src/localization/tools/timer/: CMakeLists.txt  timer.cpp
src/python/: compute_cost_matrix.py  compute_similarity_matrix.py  convert_numpy_features_to_protos.py  convert_numpy_features_to_protos_test.py  convert_numpy_to_scan_context.py  matching_scripts.py  protos_io.py  requirements.txt  run_matching.py  run_matching_from_config.py  run_matching_from_features.py  run_matching_from_images.py  run_scan_context_matching.py  store_image_matches.py  visualize_cost_matrix.py  visualize_localization_result.py  visualize_matching_result.py  visualize_similarity_matrix.py
src/python/bow/: bow.py  requirements.txt  test_bow.py
src/python/netvlad/: netvlad_extractor.py  requirements.txt
src/test/: CMakeLists.txt  cost_matrix_test.cpp  database_test.cpp  dummy_test.cpp  dummy_test_2.cpp  feature_buffer_test.cpp  online_localizer_test.cpp  scan_context_test.cpp  similarity_matrix_test.cpp  successor_manager_test.cpp  test_utils.h
src/viewer/: README.md  copy_protos.sh  package-lock.json  package.json
src/viewer/public/: index.html
src/viewer/src/: App.js  App.tsx  CostMatrixComponent.tsx  FileLoader.js  ImageCostMatrix.js  ImageCostMatrix.tsx  ImagesLoader.css  ImagesLoader.tsx  InteractiveCostMatrix.tsx  ProtoLoader.js  ProtoLoader.tsx  costMatrix.ts  matchingResult.tsx
src/viewer/src/components/: CostMatrixComponent.tsx  DataLoader.tsx  ImageCarousel.css  ImageCarousel.tsx  ImageCostMatrix.tsx  ImagePreviewComponent.tsx  ImagesLoader.css  ImagesPreview.tsx  InteractiveCostMatrix.tsx  ProtoLoader.tsx
src/viewer/src/context/: ElementContext.tsx
src/viewer/src/resources/: readers.ts
